sourceSets {
    main {
        java.srcDirs += "src"
    }
}

dependencies {
    compile(project(":core"))
}

sourceCompatibility = '10'
targetCompatibility = '10'

compileJava.options.fork = true
def jdk10Home = System.getenv("JDK_10")
if (jdk10Home == null) {
    throw new GradleException('JDK_10 environment variable is not defined')
}
compileJava.options.compilerArgs = ["--add-modules", "jdk.hotspot.agent",
                                    "--add-exports=jdk.hotspot.agent/sun.jvm.hotspot.classfile=ALL-UNNAMED",
                                    "--add-exports=jdk.hotspot.agent/sun.jvm.hotspot.memory=ALL-UNNAMED",
                                    "--add-exports=jdk.hotspot.agent/sun.jvm.hotspot.oops=ALL-UNNAMED",
                                    "--add-exports=jdk.hotspot.agent/sun.jvm.hotspot.runtime=ALL-UNNAMED",
                                    "--add-exports=jdk.hotspot.agent/sun.jvm.hotspot.debugger=ALL-UNNAMED",
                                    "--add-exports=jdk.hotspot.agent/sun.jvm.hotspot.utilities=ALL-UNNAMED"
]
compileJava.options.forkOptions.executable = "$jdk10Home/bin/javac"